# SQLite_Pmem

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  Transaction_pre_computed_test.csv  main.c  manifest  manifest.uuid  results.csv  test_results_transactions.csv  test_results_transactions_sync=full.csv
TPC-E/prj/: Makefile
benchmark/: Makefile  bench  bench-logging.c  bench_main.cpp  benchmark.c  helper.h  helper.hpp  local.cmake  main.c  main.cpp  msc_dense_helper.hpp  msc_large_helper.hpp  pmem_vfs.c  sqlite-bench  sqlite_helper.hpp  tpc-c_schema.sql
benchmark/benchmark_old/: Makefile  benchmark.c  main.c
benchmark/blob/: blob_duckdb.cpp  blob_msc_dense.cpp  blob_msc_large.cpp  blob_sqlite3.cpp  helpers.hpp
benchmark/scripts/: all.sh  blob.sh  duckdb_blob.sh  duckdb_ssb.sh  duckdb_tatp.sh  sqlite_blob.sh  sqlite_ssb.sh  sqlite_tatp.sh  ssb.sh  tatp.sh  unix.sh
benchmark/src/benchmarks/tatp/: cxxopts.hpp  helpers.hpp  tatp_sqlite3.cpp
benchmark/src/benchmarks/tatp/sql/init/: sqlite3.sql
benchmark/ssb/: helpers.hpp  ssb_duckdb.cpp  ssb_msc_dense.cpp  ssb_msc_large.cpp  ssb_sqlite3.cpp
benchmark/tatp/: helper.hpp  helpers.hpp  msc_dense_tatp.cpp  msc_large_tatp.cpp  sqlite_tatp.cpp  tatp_duckdb.cpp
duckdb/: local.cmake
logs/: Common.hpp  NonVolatileMemory.hpp  PMDK_log.hpp  Random.hpp  logging.cpp
results/: master_results.csv  results.csv  test_results.csv  test_results_loading.csv  test_results_transactions.csv  test_results_transactions_sync=full.csv  unix-0gb-cache-results.csv  unix-0gbCache-sync=Normal.csv  unix-1gb-cache-results.csv  unix-1gb-cache-sync=normal.csv
scripts/: all.sh
scripts/benchmarks/: tatp.sh
sql/: 4_create_index.sql  create_tables.sql  extract.py  load_data.sql
sqlite/: local.cmake
tatp/: README.txt  index.html  license_agreement.html  quick.html  tatp_faq.html  tatp_relnotes.txt  tm1_notes.html
tatp/ddf/: example.ddf  mysql50-innodb-lin.ddf  mysql50-innodb-win.ddf  soliddb65-lin-acc.ddf  soliddb65-lin.ddf  soliddb65-win.ddf
tatp/images/: position.css  styles.css
tatp/source/: client-VS2008.vcproj  client.c  client.h  columnvalues.c  columnvalues.h  communication.c  communication.h  const.h  control-VS2008.vcproj  control.c  control.h  fileoper.c  fileoper.h  linuxspec.c  linuxspec.h  mt19937ar.c  parameters.c  parameters.h  pcre.h  pcreposix.h  random.c  random.h  remcontrol.c  remcontrol.h  server.h  server_dummy.c  solid_accelerator.c  statistics-VS2008.vcproj  statistics.c  statistics.h  targetdb.c  targetdb.h  tatp-VS2008.sln  tatp.h  tatpversion.h  thd.c  thd.h  timer.c  timer.h  tirdb.c  (+3 more)
tatp/source/lib_win32/: README.txt
tatp/source/lib_x64/: README.txt
tatp/tdf/: example-multipartition.tdf  example-ris.tdf  example-uls.tdf  example.tdf
tatp/tirdb/: get_all_90percentile.sql  get_resp_time_histograms.sql  get_test_runs.sql  initDataExample.sql  readme.txt  tirdb.sql
test/: hello_libpmem  hello_libpmem.c  makefile  pmem_vfs.c
vfs/: local.cmake  os_unix.c  pmem_vfs.c  pmem_vfs.h  pmem_wal_only_vfs.c  pmem_wal_only_vfs.h  test_demovfs.c  test_demovfs.h
